# goldnlp

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml  docker-run.yml
services/named-entity-recognition/: api.py  data_models.py
src/goldnlp/: __init__.py  classifying.py  constants.py  crosslinking.py  events.py  extracting.py  ngramchunker.py  nlpdocument.py  quality_check.py  spacy_pipeline.py  spacy_utils.py  summarizing.py  timer.py  utils.py
tests/: nlp_tests.py
